core/src/main/web/app/styles/datatables.scss
$border-color: #D4D0D0;

.dtcontainer {
  position: relative;
  .dropdown-menu {
    margin-top: 1px;
  }
  .dtmenu input[type='checkbox'] {
    position: absolute;
    top: 1px;
    left: 5px;
    padding: 3px 4px;
  }
  .ui-resizable-s span {
    font-size: 13px;
    float: right;
  }
}

table.dataTable {
  margin : 0;
  thead th, tbody td {
    padding: 4px 10px 4px 20px;
    white-space: nowrap;
    border: 1px solid $border-color;
    border-width: 0 1px 0 0;
    overflow-x: hidden;
    text-overflow: ellipsis;
    &:first-child {
      border-left-width: 1px;
    }
  }
  thead {
    background-color: #E6E6E6;
    th {
      border-width: 1px 1px 1px 0;
      color: #515A5A;
      font-weight: normal;
    }
    .filterRow th {
      border-top-width: 0px;
      padding-left: 5px;
    }
  }
}

th.dtright {
  text-align : right
}
th.dtcenter {
  text-align : center
}
td.dtright {
  text-align : right
}
td.dtcenter {
  text-align : center
}

.dataTables_wrapper.no-footer .dataTables_scrollBody {
  border-color: $border-color;
}

.dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_evalfilter {
  float:      left;
  text-align: left;
  margin-top: 7px;
  margin-right: 10px;
  display:    none;

  input {
    margin-left: 0.5em;
  }

  .fa.fa-times {
    cursor:       pointer;
    padding: 5px;
    color:        #999999;
    &:hover {
      opacity: 0.8;
    }
  }
}

.input-clear-growing {
  position: relative;
  input {
    border: 1px solid #ccc;
    padding-right: 20px;
    width: 100%;
  }
  .hidden-length, .hidden-filter-input {
    display: none;
  }
}
.input-clear {
  position: relative;
  &.editing {
    position: absolute;
    left: 0px;
    top: 1px;
    z-index: 10;
  }
  input {
    border: 1px solid #ccc;
    padding: 0 20px 0 15px;
    width: 100%;
  }

  span {
    position: absolute;
    top: 0;
    bottom: 0;
    height: 14px;
    margin: auto;
    color: #999999;

    &.clear-filter {
      right: 5px;
      cursor: pointer;
      &:hover {
        opacity: 0.8;
      }
    }
    &.filter-icon {
      cursor: auto;
      left: 3px;
    }
  }
}

div.dtmenu {
  position: absolute;
  top: 1px;
  cursor: pointer;
  &:hover {
    background-color: #39A9ED;
  }
}

a.dtmenu {
  cursor: pointer;
  text-decoration: none;
  font-size: 12px;
  background: url("../images/down@2x.png") no-repeat scroll right center / 8px auto transparent;
  padding-left: 13px;
  padding-right: 13px;
  margin-left: 10px;
  margin-right: 10px;
}

.dtmenu .bko-menu {
  display: block;
  &:hover {
    background-image: url("../images/menu_white@2x.png");
  }
  &.sorting_desc {
    background-image: url("../images/sort_desc.png");
    background-size: 20px;
    opacity: 1;
    &:hover {
      background-image: url("../images/sort_desc_white.png");
    }
  }
}

.dt-cell-div {
  width: 100%;
  height: 18px;
  position:relative;
}

.dt-cell-text {
  position: relative;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.dt-bar-data {
  background-color: #6ba2c7;
  height: 100%;
  position: absolute;
}

.bko-table-use-pagination {
  padding: 10px 10px 0 30px;;
  float: left;
  label {
    cursor: pointer;
  }
}

$fixed-column-even: #fafafa;
$fixed-column-odd: #f3f3f3;
$fixed-column-even-sorting: #f7f7f7;
$fixed-column-odd-sorting: #f1f1f1;
$fixed-column-selected: #B0BED9;

table.dataTable.DTFC_Cloned.stripe tbody tr,
table.dataTable.DTFC_Cloned.display tbody tr {
  &.odd {
    background-color: $fixed-column-odd;
    & > .sorting_1 :not(.selected),
    & > .sorting_2 :not(.selected),
    & > .sorting_3 :not(.selected) {
      background-color: $fixed-column-odd-sorting;
    }
  }
  &.even {
    background-color: $fixed-column-even;
    & > .sorting_1 :not(.selected),
    & > .sorting_2 :not(.selected),
    & > .sorting_3 :not(.selected)  {
      background-color: $fixed-column-even-sorting;
    }
  }
  &.selected {
    background-color: $fixed-column-selected;
  }
}


.DTFC_LeftWrapper table.dataTable thead th:last-child,
.DTFC_LeftWrapper table.dataTable tbody td:last-child {
  border-right-width: 3px;
}

.DTFC_RightWrapper table.dataTable thead th:first-child,
.DTFC_RightWrapper table.dataTable tbody td:first-child {
  border-left-width: 3px;
}

.left-fix-col-separator {
  border-right-width: 3px !important;
}

.menu-separator {
  border-top: solid 1px #CCC;
}

